[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Player/bruhHand.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadow/Shadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Collisions/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Collisions/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Enemies/ClopBody.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/ClopHead.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Enemies/Clop.gd" type="Script" id=7]
[ext_resource path="res://Assets/SFX/Attack02.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/Attack03.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/MenuValid01.wav" type="AudioStream" id=10]

[sub_resource type="CylinderShape" id=1]
radius = 0.3
height = 1.0

[sub_resource type="Animation" id=2]
resource_name = "ClopDeath"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hands:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteHead:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.01 ), Vector3( 0, 0.1, 0.01 ), Vector3( 0, 0, 0.01 ), Vector3( 0, -0.5, 0.01 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ClopTail"
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hands:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteBody:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpriteHead:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0.01 ) ]
}

[sub_resource type="CylinderShape" id=4]
radius = 0.4
height = 1.0

[sub_resource type="SphereShape" id=5]
radius = 12.0

[sub_resource type="CylinderShape" id=6]
radius = 0.55
height = 1.0

[node name="Clop" type="KinematicBody" groups=["Enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 8
collision_mask = 9
script = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="SpriteHead" type="Sprite3D" parent="."]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 0, 0.01 )
texture = ExtResource( 6 )
hframes = 5

[node name="SpriteBody" type="Sprite3D" parent="."]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 0, 0 )
texture = ExtResource( 5 )
hframes = 8

[node name="SpriteShadow" type="Sprite3D" parent="."]
transform = Transform( 6, 0, 0, 0, -2.62268e-07, 1, 0, -6, -4.37114e-08, 0, -0.49, 0 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ClopTail"
anims/ClopDeath = SubResource( 2 )
anims/ClopTail = SubResource( 3 )

[node name="Hands" type="Spatial" parent="."]

[node name="LeftHand" type="Spatial" parent="Hands"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, -0.25, 0 )

[node name="LeftHandSprite" type="Sprite3D" parent="Hands/LeftHand"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="RightHand" type="Spatial" parent="Hands"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.25, 0 )

[node name="RightHandSprite" type="Sprite3D" parent="Hands/RightHand"]
transform = Transform( 6, 0, 0, 0, 6, 0, 0, 0, 1, 0, 0, 0 )
texture = ExtResource( 1 )

[node name="Rays" type="Spatial" parent="."]

[node name="RayCastUp" type="RayCast" parent="Rays"]
enabled = true
cast_to = Vector3( 0, 0, -20 )
collision_mask = 2

[node name="RayCastDown" type="RayCast" parent="Rays"]
enabled = true
cast_to = Vector3( 0, 0, 20 )
collision_mask = 2

[node name="RayCastLeft" type="RayCast" parent="Rays"]
enabled = true
cast_to = Vector3( -20, 0, 0 )
collision_mask = 2

[node name="RayCastRight" type="RayCast" parent="Rays"]
enabled = true
cast_to = Vector3( 20, 0, 0 )
collision_mask = 2

[node name="HurtBox" parent="." groups=["Enemy"] instance=ExtResource( 4 )]
collision_layer = 64
collision_mask = 4

[node name="CollisionShape" parent="HurtBox" index="0"]
shape = SubResource( 4 )

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" parent="PlayerDetection" index="0"]
shape = SubResource( 5 )

[node name="DirChangeArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape" type="CollisionShape" parent="DirChangeArea"]
shape = SubResource( 6 )

[node name="SFXTarget" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 10 )
unit_db = 6.0

[node name="SFXHurt1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 8 )
unit_db = 9.0

[node name="SFXHurt2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 6.0

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="DirChangeArea" to="." method="_on_DirChangeArea_body_entered"]

[editable path="HurtBox"]
[editable path="PlayerDetection"]
